--- a/src/assets/styles/imports/_header.scss
+++ b/src/assets/styles/imports/_header.scss
@@ -73,10 +73,9 @@
 }
 
 #main-navigation {
-  a {
+  .menu-item a {
     border: 0;
     color: inherit;
-
     &:hover,
     &:focus {
       color: _palette(accent);
