--- a/src/assets/styles/imports/_header.scss
+++ b/src/assets/styles/imports/_header.scss
@@ -131,19 +131,26 @@
       padding: 4.5rem 4vw 3.33333rem;
     }
 
+    .button {
+      width: 100%;
+      text-align: center;
+      font-size: 16px !important;
+      margin-top: 50px;
+    }
+
     .menu-item {
       border-bottom: 1px solid _palette(border);
       display: block;
       margin: 0;
 
+      a {
+        display: block;
+        padding: 0.83333rem 0;
+      }
+
       &:first-child {
         border-top: 1px solid _palette(border);
       }
-    }
-
-    a {
-      display: block;
-      padding: 0.83333rem 0;
     }
 
     #menu-close {
