added styled code snippets

--- a/src/assets/styles/imports/_general.scss
+++ b/src/assets/styles/imports/_general.scss
@@ -85,15 +85,15 @@ ins {
   text-decoration: none;
 }
 
-pre {
-  border: 1px solid _palette(border);
-  font-size: 0.88889rem;
-  margin: 0 0 1.66667rem;
-  overflow: auto;
-  padding: 1.5em 1.875em;
-  position: relative;
-  white-space: pre;
-}
+// pre {
+//   border: 1px solid _palette(border);
+//   font-size: 0.88889rem;
+//   margin: 0 0 1.66667rem;
+//   overflow: auto;
+//   padding: 1.5em 1.875em;
+//   position: relative;
+//   white-space: pre;
+// }
 
 blockquote {
   border-left: 5px solid _palette(accent);
